# prefix-tuning

./: .gitignore  README.md  main.ipynb  pyproject.toml
data/: test.csv  train.csv
src/: data.py  inference.py  train.py  utils.py
