[project]
name = "prefix-tuning"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "<Guillaume Soisson>", email = "<guillaume.soisson@gitguardian.com>" },
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.2.2",
    "peft>=0.11.1",
    "tqdm>=4.66.4",
    "datasets>=2.20.0",
    "nltk>=3.8.1",
    "jupyter>=1.0.0",
    "transformers>=4.41.2",
    "torch>=2.3.1",
]

[tool.pdm]
distribution = false
